fix: pre-wrap for legacy browser

--- a/src/components/equip_view/equip_view.less
+++ b/src/components/equip_view/equip_view.less
@@ -9,7 +9,7 @@
     position: relative;
 
     .has-break {
-        white-space: break-spaces;
+        white-space: pre-wrap;
     }
 
     &.empty-equip {
